--- a/xperiences/merchants/templates/merchants/merchant_application.html
+++ b/xperiences/merchants/templates/merchants/merchant_application.html
@@ -41,7 +41,7 @@
 					<div class="row">
 						<div class="span6">
 							<label>Phone number</label>
-							<input class="span6" type="text" name="phone-number" value='{{ form.phone_number.value }}' />
+							<input class="span6" type="text" name="phone_number" value='{{ form.phone_number.value }}' />
 						</div>
 					</div>
 					<address><!-- html 5 semantic markup -->
@@ -90,7 +90,7 @@
 						<div class="pad15">
 						<h3>Tell us about yourself</h3>
 						<p class="help-text">Tell us about yourself, how long have you been doing this, what sets you apart... anything that helps tell your story</p>
-						<textarea class="span6" class="description" required="required" name="merchant_app_description">{{ form.description.value }}</textarea>
+						<textarea class="span6" class="description" required="required" name="description">{{ form.description.value }}</textarea>
 					</div>
 					</fieldset>
 
@@ -98,7 +98,7 @@
 						<div class="pad15">
 						<h3>What are you offering?</h3>
 						<p class="help-text">Tell us about your services, what makes your work appealing and unique to your customers</p>
-						<textarea class="span6" class="description" required="required" name="offering_app_description">{{ form.offering.value }}</textarea>
+						<textarea class="span6" class="description" required="required" name="offering">{{ form.offering.value }}</textarea>
 					</div>
 					</fieldset>
 
@@ -107,7 +107,7 @@
 						<div class="pad15">
 						<h3>Who are your customers?</h3>
 						<p class="help-text">Describe your target customers (age, charateristics, lifestyle, etc.)</p>
-						<textarea class="span6" class="description" required="required" name="target_customers_app_description">{{ form.target_customers.value }}</textarea>
+						<textarea class="span6" class="description" required="required" name="target_customers">{{ form.target_customers.value }}</textarea>
 					</div>
 					</fieldset>
 					<div class="space30"></div>
