--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -77,7 +77,7 @@ header {
 }
 
 #header-notice-bar {
-	display: block;
+	display: none;
 	color: black;
 	background: #ffaa00;
 	text-align: center;
@@ -85,6 +85,13 @@ header {
 	font-size: 12pt;
 	box-shadow: inset 0px -2px 8px -2px rgba(0, 0, 0, 0.3);
 	z-index: 101;
+	transition: all 1s;
+	overflow: hidden;
+}
+
+#header-notice-close {
+	margin-left: 100px;
+	vertical-align: middle;
 }
 
 header .header-wrap {
