--- a/xperiences/merchants/templates/merchants/waiting_approval.html
+++ b/xperiences/merchants/templates/merchants/waiting_approval.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-Waiting  Approval
+<div class="space60"></div>
+<div class="span7 center">
+	<div class="panel">
+		<div class="pad15">
+			<h1 class="title">Thank you for your patience</h1>
+			<p>We are currently reviewing your application and will get back to you shortly.</p>
+			<p><a href="/">Back to home</a></p>
+		</div>
+	</div>
+	<div id="login-img" class="panel span7 row">
+	</div>
+</div>
 {% endblock %}
 
 
