--- a/xperiences/media/css/base.css
+++ b/xperiences/media/css/base.css
@@ -346,8 +346,8 @@ p, ul {
 }
 
 .panel:hover {
-	border-color: #bbbbbb;
-	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+	border-color: #eee;
+	box-shadow: 0px 0px 1px 0px rgba(255, 170, 0, 0.6);
 	-moz-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 }
