--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -70,6 +70,9 @@
     <script type="text/javascript" src="/static/admin/js/actions.min.js"></script>
     <script type="text/javascript" src="/static/admin/js/calendar.js"></script>
     <script type="text/javascript" src="/static/admin/js/admin/DateTimeShortcuts.js"></script>
+    <script>
+        var $ = django.jQuery;
+    </script>
 
 {% endblock %}
 
