--- a/xperiences/templates/email_referral.html
+++ b/xperiences/templates/email_referral.html
@@ -10,6 +10,7 @@
 			<h1>Sharing is Caring</h1>
             {% if not sent %}
                 <form method='POST'>
+            <p>{{ status }}</p>
 			<p>Input names, separated by commas</p>
 			<div class="row">
 				<input type="text" class="span8" name='to' />
