--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -1,9 +1,11 @@
 {% block header %}
 <header>
-<a id="header-notice-bar" href="/share">
-	The more the merrier. Share this with your friends and eat to your heart's content!
+<div id="header-notice-bar">
+	<a href="/share">
+		The more the merrier. Share this with your friends and eat to your heart's content!
+	</a>
 	<img id="header-notice-close" src="{{ MEDIA_URL }}/images/close.png">
-</a>
+</div>
 	<div class="header-wrap span12">
 		<a id="logo" href="/"><span>naanprofit</span></a>
 		<a id="service-list" href="/experiences/add_experience/">Start Selling!</a>
