--- a/xperiences/experiences/templates/experiences/list.html
+++ b/xperiences/experiences/templates/experiences/list.html
@@ -48,9 +48,9 @@
 	<script type='text/x_jquery_templates' id='test-template'>
 		<div class="search-result span3 panel">
 			<div class="pad8">
-				<div class="image-wrapper">
+				<a href="/experiences/{% t_var slug_id %}"><div class="image-wrapper">
 					<img alt=" {% t_var title %} "{% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %} />
-				</div>
+			</div></a>
 				<div class="name"><a title="{% t_var title %}" href="/experiences/{% t_var slug_id %}">{% t_var title %}</a></div>
 			<div class="price">${% t_var price %}</div>
 			<div class="merchant">
