--- a/xperiences/media/css/base.css
+++ b/xperiences/media/css/base.css
@@ -568,15 +568,23 @@ select:focus {
 }
 
 .btn:hover {
+	background-color: #ffffff;
+	background: linear-gradient(top, #ffffff, #f9f9f9, #e9e9e9);
 	background: -moz-linear-gradient(top, #ffffff, #f9f9f9, #e9e9e9);
 	background: -webkit-linear-gradient(top, #ffffff, #f9f9f9, #e9e9e9);
+	background: -o-linear-gradient(top, #ffffff, #f9f9f9, #e9e9e9);
+	background: -ms-linear-gradient(top, #ffffff, #f9f9f9, #e9e9e9);
 	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.8), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.2);
 	text-decoration: none;
 }
 
 .btn:active {
-	background: -moz-linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
+	background-color: #f6f6f6;
+	background: linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
 	background: -webkit-linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
+	background: -moz-linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
+	background: -o-linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
+	background: -ms-linear-gradient(top, #f6f6f6, #f0f0f0, #e3e3e3);
 	position: relative;
 	top: 1px;
 	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.8), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.2);
@@ -600,6 +608,7 @@ input[type="submit"], .btn.submit {
 }
 
 input[type="submit"]:hover, .submit:hover {
+	background-color: #a6cb1a;
 	background: linear-gradient(top, #a6cb1a, #96b32b);
 	background: -o-linear-gradient(top, #a6cb1a, #96b32b);
 	background: -ms-linear-gradient(top, #a6cb1a, #96b32b);
@@ -608,6 +617,7 @@ input[type="submit"]:hover, .submit:hover {
 }
 
 input[type="submit"]:active, .submit:active {
+	background-color: #8bb001;
 	background: linear-gradient(top, #8bb001, #7d9911);
 	background: -o-linear-gradient(top, #8bb001, #7d9911);
 	background: -ms-linear-gradient(top, #8bb001, #7d9911);
@@ -616,6 +626,7 @@ input[type="submit"]:active, .submit:active {
 }
 
 .btn.blue {
+	background-color: #5da7e5;
 	background: linear-gradient(top, #5da7e5, #296f9a);
 	background: -webkit-linear-gradient(top, #5da7e5, #296f9a);
 	background: -o-linear-gradient(top, #5da7e5, #296f9a);
@@ -626,15 +637,16 @@ input[type="submit"]:active, .submit:active {
 }
 
 .btn.blue:hover {
+	background-color: #6dafe8;
 	background: linear-gradient(top, #6dafe8, #4282ab);
 	background: -o-linear-gradient(top, #6dafe8, #4282ab);
 	background: -ms-linear-gradient(top, #6dafe8, #4282ab);
 	background: -moz-linear-gradient(top, #6dafe8, #4282ab);
 	background: -webkit-linear-gradient(top, #6dafe8, #4282ab);
-
 }
 
 .btn.blue:active {
+	background-color: #5294cb;
 	background: linear-gradient(top, #5294cb, #28668e);
 	background: -o-linear-gradient(top, #5294cb, #28668e);
 	background: -ms-linear-gradient(top, #5294cb, #28668e);
