--- a/xperiences/merchants/templates/merchants/experiences.html
+++ b/xperiences/merchants/templates/merchants/experiences.html
@@ -34,13 +34,13 @@
 			</a>
 		</td>
 		<td>
-			USD100.00
+			{% t_var price %} $
 		</td>
 		<td>
-			10
+			{% t_var capacity %}
 		</td>
 		<td>
-			200
+			{% t_var page_views %}
 		</td>
 		<td>
 			<a href="/merchants/edit_experience/{% t_var slug_id %}/">edit</a>
